Functionality for update password was linked to backend

--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>Title</title>
-        <link rel="stylesheet" href="/css/index.css" />
-        <script type="module" src="/scripts/index.js"></script>
+        <title>Log In Book Rating System</title>
+        <link rel="stylesheet" href="../css/index.css" />
+        <script type="module" src="../scripts/index.js"></script>
+        <style>
+            .error_message {
+                padding: 0.5em;
+                display: none;
+                color:red;
+                font-weight: 700;
+                font-size: 12px;
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
         <nav class="container nav_container">
@@ -26,7 +36,7 @@
                                 placeholder="Enter email"
                                 required />
                         </div>
-                        <div class="margin_right_1" style="">
+                        <div class="margin_right_1">
                             <label for="password_form1" class="hidden">Password</label>
                             <input
                                 id="password_form1"
@@ -39,9 +49,12 @@
                             </p>
                         </div>
                         <div>
-                            <button type="submit" onclick="" class="button_green button">Log in</button>
+                            <button id="log_in_btn_1" type="submit" class="button_green button">Log in</button>
                         </div>
                     </form>
+                    <div id="login_error_container_form1" class="error_message">
+                        <p id="login_error_message_form1"></p>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -55,11 +68,11 @@
                     </p>
                 </div>
 
-                <div id="form_box" class="content_section" style="">
+                <div id="form_box" class="content_section">
                     <!--this section will only show one form at a time, either sign up or log in
                         this will happen on small screens, on big screens only sign up form is shown -->
                     <div id="sign_up_form_container" class="form_container">
-                        <form class="signUp_form">
+                        <form id="signUp_form" class="signUp_form">
                             <div class="margin_bottom_1">
                                 <label for="inputName2" class="hidden">First Name</label>
                                 <input
@@ -96,8 +109,11 @@
                                     class="form_input form_input2"
                                     placeholder="Password" />
                             </div>
+                            <div id="sign_up_error" class="margin_bottom_1 error_message">
+                                <p id="sign_up_error_message"></p>
+                            </div>
                             <div class="form_submit">
-                                <button onclick="" type="submit" class="button_blue button sign_up_button">
+                                <button type="submit" class="button_blue button sign_up_button" id="sign_up_btn">
                                     Sign Up
                                 </button>
                             </div>
@@ -132,8 +148,11 @@
                                     placeholder="Password"
                                     required />
                             </div>
+                            <div id="log_in_error" class="margin_bottom_1 error_message">
+                                <p id="log_in_error_message"></p>
+                            </div>
                             <div class="form_submit margin_bottom_1">
-                                <button type="submit" onclick="" class="button_green button sign_up_button">
+                                <button type="submit" id="log_in_btn_2" class="button_green button sign_up_button">
                                     Log in
                                 </button>
                             </div>
