--- a/pages/add_book_page.html
+++ b/pages/add_book_page.html
@@ -23,7 +23,7 @@
             <div class="content_90">
                 <h2 class="page_activity margin_bottom_1">Add a new book</h2>
                 <div class="main_form_container">
-                    <form class="form_box" action="#" method="POST" enctype="multipart/form-data">
+                    <form class="form_box" enctype="multipart/form-data">
                         <div class="form_row">
                             <label class="form_label" for="course"
                                 >Choose a course
