--- a/pages/courses_page.html
+++ b/pages/courses_page.html
@@ -12,7 +12,6 @@
         <link rel="stylesheet" href="../css/courses_and_books.css" />
         <script src="https://cdn.jsdelivr.net/npm/handlebars/dist/handlebars.min.js"></script>
         <script src="../scripts/load_nav_template.js"></script>
-        <style></style>
     </head>
     <body>
         <div class="container">
@@ -46,8 +45,8 @@
             </div>
         </main>
 
-        <script src="../scripts/courses_page_script.js"></script>
-        <script src="../scripts/nav_bar_logged_in.js"></script>
-        <script src="../scripts/query_courses.js"></script>
+        <script src="/scripts/courses_page_script.js"></script>
+        <script src="/scripts/nav_bar_logged_in.js"></script>
+        <script src="/scripts/query_courses.js"></script>
     </body>
 </html>
