Added code to make the add course work

--- a/pages/add_course_page.html
+++ b/pages/add_course_page.html
@@ -11,6 +11,11 @@
         <link rel="stylesheet" href="../css/navigation.css" />
         <script src="https://cdn.jsdelivr.net/npm/handlebars/dist/handlebars.min.js"></script>
         <script src="../scripts/load_nav_template.js"></script>
+        <style>
+            #message_container {
+                display: none;
+            }
+        </style>
     </head>
     <body>
         <div class="container">
@@ -23,7 +28,7 @@
             <div class="content_90">
                 <h2 class="page_activity margin_bottom_1">Add a new course</h2>
                 <div class="main_form_container">
-                    <form class="form_box">
+                    <form class="form_box" id="add_course_form">
                         <div class="form_row">
                             <label for="course_code_input" class="form_label"
                                 >Course code
@@ -41,7 +46,7 @@
                         </div>
 
                         <div class="form_row">
-                            <label for="course_name_input" class="form_label">Course name </label>
+                            <label for="course_name_input" class="form_label">Course name</label>
                             <input
                                 type="text"
                                 required
@@ -51,8 +56,12 @@
                         </div>
 
                         <div class="form_submit">
-                            <button id="submit_btn" onclick="" type="submit" class="button_green button">Submit</button>
-                            <button id="cancel_btn" onclick="" type="submit" class="button button_red">Cancel</button>
+                            <button id="submit_btn" type="submit" class="button_green button">Save Course</button>
+                            <!-- <button id="cancel_btn" onclick="" type="button" class="button button_red">Cancel</button> -->
+                        </div>
+
+                        <div id="message_container" class="form_row message_container">
+                            <p id="message" class="message"></p>
                         </div>
                     </form>
                 </div>
@@ -60,5 +69,6 @@
         </main>
 
         <script src="../scripts/nav_bar_logged_in.js"></script>
+        <script src="../scripts/add_course.js"></script>
     </body>
 </html>
