Add a course is working now with the backend

--- a/pages/add_course_page.html
+++ b/pages/add_course_page.html
@@ -6,15 +6,13 @@
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-        <link rel="stylesheet" href="../css/general.css" />
+        <link rel="stylesheet" href="../css/general.css"/>
         <link rel="stylesheet" href="../css/add_course_or_book.css" />
         <link rel="stylesheet" href="../css/navigation.css" />
+        <link rel="stylesheet" href="../css/profile_page.css" />
         <script src="https://cdn.jsdelivr.net/npm/handlebars/dist/handlebars.min.js"></script>
         <script src="../scripts/load_nav_template.js"></script>
         <style>
-            #message_container {
-                display: none;
-            }
         </style>
     </head>
     <body>
