--- a/pages/course_page.html
+++ b/pages/course_page.html
@@ -10,70 +10,9 @@
         <link rel="stylesheet" href="../css/navigation.css" />
         <link rel="stylesheet" href="../css/confirmation_modal.css" />
         <link rel="stylesheet" href="../css/courses_and_books.css" />
+        <link rel="stylesheet" href="../css/course_page.css" />
         <script src="https://cdn.jsdelivr.net/npm/handlebars/dist/handlebars.min.js"></script>
         <script src="../scripts/load_nav_template.js"></script>
-        <style>
-            .main_container {
-                padding-bottom: 2em;
-            }
-            @media screen and (min-width: 701px) {
-                #upper_container {
-                    display: flex;
-                    flex-direction: row;
-                    align-items: center;
-                    width: 90%;
-                    max-width: 800px;
-                    margin-bottom: 1em;
-                    margin-top: 2em;
-                    justify-content: space-between;
-                    align-self: center;
-                }
-                .modal_content {
-                    padding: 2em;
-                    max-width: 800px;
-                }
-
-                #modal_title {
-                    font-weight: 800;
-                    width: 100%;
-                    text-align: center;
-                    margin-bottom: 1em;
-                }
-            }
-
-            @media screen and (max-width: 700px) {
-                #upper_container {
-                    /*position: sticky;*/
-                    /*top: 0;*/
-                    padding-top: 1em;
-                    /*background-color: #f7f7f7;*/
-                    /*z-index: 1000;*/
-                    display: flex;
-                    flex-direction: column;
-                }
-
-                #book_title_h2 {
-                    font-size: calc(14px + 2vw);
-                    margin-bottom: 1em;
-                    text-align: center;
-                }
-
-                #suggest_book_container {
-                    align-self: center;
-                    margin-bottom: 1em;
-                    width: 100%;
-                    display: flex;
-                    justify-content: center;
-                }
-
-                #suggest_book_btn {
-                    font-size: calc(12px + 1vw);
-                    font-weight: 500;
-                    width: 85%;
-                    font-size: 20px;
-                }
-            }
-        </style>
     </head>
     <body>
         <div class="container">
@@ -83,10 +22,10 @@
         </div>
 
         <main class="container main_container">
-            <div id="main_content" class="content_90" style="">
+            <div id="main_content" class="content_90">
                 <div id="upper_container">
                     <div>
-                        <h2 id="book_title_h2">Book List for Algorithms CM2021</h2>
+                        <h2 id="book_title_h2"></h2>
                     </div>
                 </div>
                 <div id="book_list_container" class="filtered_list">
@@ -95,7 +34,7 @@
             </div>
         </main>
         <script type="module" src="../scripts/list_books_for_course.js"></script>
-        <script src="../scripts/suggest_book_modal.js"></script>
+        <!-- <script src="../scripts/suggest_book_modal.js"></script> -->
         <script src="../scripts/nav_bar_logged_in.js"></script>
     </body>
 </html>
