fix error alert on adding book to module.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                                 type="password"
                                 class="form_input"
                                 placeholder="Password"
+                                autocomplete="on"
                                 required />
                             <p class="forgot_pass">
                                 <a href="#" alt="forgot password">Forgot password?</a>
@@ -107,6 +108,7 @@
                                     type="password"
                                     required
                                     class="form_input form_input2"
+                                    autocomplete="on"
                                     placeholder="Password" />
                             </div>
                             <div id="sign_up_error" class="margin_bottom_1 error_message">
@@ -146,6 +148,7 @@
                                     type="password"
                                     class="form_input form_input2"
                                     placeholder="Password"
+                                    autocomplete="on"
                                     required />
                             </div>
                             <div id="log_in_error" class="margin_bottom_1 error_message">
