--- a/pages/profile_page.html
+++ b/pages/profile_page.html
@@ -75,6 +75,7 @@
                                 class="form_input"
                                 id="current_password"
                                 name="current_password"
+                                autocomplete="on"
                                 required
                                 placeholder="current password" />
                         </div>
@@ -95,6 +96,7 @@
                                 class="form_input"
                                 id="new_password"
                                 name="new_password"
+                                autocomplete="on"
                                 required
                                 placeholder="new password" />
                         </div>
@@ -106,6 +108,7 @@
                                 class="form_input"
                                 id="new_password_repeat"
                                 name="new_password_repeat"
+                                autocomplete="on"
                                 required
                                 placeholder="repeat new password" />
                         </div>
