--- a/pages/books_page.html
+++ b/pages/books_page.html
@@ -1,16 +1,13 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Course page for BOOK TITLE HERE</title>
+        <title>Books page</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
-
         <link rel="stylesheet" href="../css/general.css" />
         <link rel="stylesheet" href="../css/add_course_or_book.css" />
         <link rel="stylesheet" href="../css/navigation.css" />
-        <link rel="stylesheet" href="../css/confirmation_modal.css" />
         <link rel="stylesheet" href="../css/courses_and_books.css" />
-        <link rel="stylesheet" href="../css/course_page.css" />
         <script src="https://cdn.jsdelivr.net/npm/handlebars/dist/handlebars.min.js"></script>
         <script src="../scripts/load_nav_template.js"></script>
     </head>
@@ -22,18 +19,31 @@
         </div>
 
         <main class="container main_container">
-            <div id="main_content" class="content_90">
-                <div id="upper_container">
-                    <div>
-                        <h2 id="book_title_h2"></h2>
+            <div class="content_90">
+                <div>
+                    <div class="centered_container title_container">
+                        <h2>Books List</h2>
+                    </div>
+                </div>
+                <div style="width: 100%">
+                    <div class="centered_container" id="search_bar_container">
+                        <div class="search_box">
+                            <input type="text" id="search_input" class="search_bar" placeholder="Search course..." />
+                            <div class="search_btn_container">
+                                <i class="fa fa-search" style="color: #727274"></i>
+                            </div>
+                        </div>
+
+                        <button class="button button_gray" onClick="resetFilter()">Reset filter</button>
                     </div>
                 </div>
                 <div id="book_list_container" class="filtered_list">
-                    <!--books template will be inserted here-->
+                    <!--books template will be inserted here to add all books-->
                 </div>
             </div>
         </main>
-        <script type="module" src="../scripts/list_books_for_course.js"></script>
-        <script src="../scripts/nav_bar_logged_in.js"></script>
+
+        <script src="/scripts/nav_bar_logged_in.js"></script>
+        <script type="module" src="/scripts/books_page.js"></script>
     </body>
 </html>
