--- a/pages/edit_book_page.html
+++ b/pages/edit_book_page.html
@@ -128,10 +128,13 @@
                             <img id="current_book_img" src="#" alt="Current Book Cover" width="100" height="auto" />
                         </div>
 
+                        <div id="message_container" class="form_row">
+                            <p id="message"></p>
+                        </div>
+
                         <div class="form_submit">
-                            <button id="submit_btn" onclick="" type="submit" class="button_green button">Save</button>
-                            <button id="cancel_btn" onclick="" type="submit" class="button button_gray">Cancel</button>
-                            <button id="delete_btn" onclick="" type="submit" class="button button_red">Delete</button>
+                            <button id="submit_btn" type="submit" class="button_green button">Save</button>
+                            <button id="delete_btn" type="button" class="button button_red">Delete</button>
                         </div>
                     </form>
                 </div>
