Edit book functionality added

--- a/pages/edit_book_page.html
+++ b/pages/edit_book_page.html
@@ -104,7 +104,7 @@
                                     <button id="confirm-delete" class="button button_red" type="submit">
                                         Yes, Delete
                                     </button>
-                                    <button id="cancel-delete" class="button button_gray" type="submit">Cancel</button>
+                                    <button id="cancel-delete" class="button button_gray" type="button">Cancel</button>
                                 </div>
                             </div>
                         </div>
@@ -133,7 +133,7 @@
                         </div>
 
                         <div class="form_submit">
-                            <button id="submit_btn" type="submit" class="button_green button">Save</button>
+                            <button id="submit_btn" type="submit" class="button_green button">Update Book</button>
                             <button id="delete_btn" type="button" class="button button_red">Delete</button>
                         </div>
                     </form>
