edit review and delete review functionality working on reviews page

--- a/pages/add_course_page.html
+++ b/pages/add_course_page.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="../css/navigation.css" />
         <link rel="stylesheet" href="../css/profile_page.css" />
         <script src="https://cdn.jsdelivr.net/npm/handlebars/dist/handlebars.min.js"></script>
-        <script src="../scripts/load_nav_template.js"></script>
+        <script type="module" src="../scripts/load_nav_template.js"></script>
         <style>
         </style>
     </head>
@@ -66,7 +66,7 @@
             </div>
         </main>
 
-        <script src="../scripts/nav_bar_logged_in.js"></script>
+        <script  src="../scripts/nav_bar_logged_in.js"></script>
         <script src="../scripts/add_course.js"></script>
     </body>
 </html>
