--- a/pages/course_page.html
+++ b/pages/course_page.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="../css/courses_and_books.css" />
         <link rel="stylesheet" href="../css/course_page.css" />
         <script src="https://cdn.jsdelivr.net/npm/handlebars/dist/handlebars.min.js"></script>
-        <script src="../scripts/load_nav_template.js"></script>
+        <script type="module" src="../scripts/load_nav_template.js"></script>
     </head>
     <body>
         <div class="container">
@@ -34,6 +34,6 @@
             </div>
         </main>
         <script type="module" src="../scripts/list_books_for_course.js"></script>
-        <script src="../scripts/nav_bar_logged_in.js"></script>
+        <script  src="../scripts/nav_bar_logged_in.js"></script>
     </body>
 </html>
