--- a/pages/books_page.html
+++ b/pages/books_page.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="../css/navigation.css" />
         <link rel="stylesheet" href="../css/courses_and_books.css" />
         <script src="https://cdn.jsdelivr.net/npm/handlebars/dist/handlebars.min.js"></script>
-        <script src="../scripts/load_nav_template.js"></script>
+        <script type="module" src="../scripts/load_nav_template.js"></script>
     </head>
     <body>
         <div class="container">
