--- a/pages/edit_book_page.html
+++ b/pages/edit_book_page.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="../css/navigation.css" />
         <link rel="stylesheet" href="../css/confirmation_modal.css" />
         <script src="https://cdn.jsdelivr.net/npm/handlebars/dist/handlebars.min.js"></script>
-        <script src="../scripts/load_nav_template.js"></script>
+        <script type="module" src="../scripts/load_nav_template.js"></script>
     </head>
     <body>
         <div class="container">
