--- a/pages/edit_course_page.html
+++ b/pages/edit_course_page.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="../css/confirmation_modal.css"/>
         <link rel="stylesheet" href="../css/profile_page.css"/>
         <script src="https://cdn.jsdelivr.net/npm/handlebars/dist/handlebars.min.js"></script>
-        <script src="../scripts/load_nav_template.js"></script>
+        <script type="module" src="../scripts/load_nav_template.js"></script>
     </head>
     <body>
         <div class="container">
