--- a/pages/reviews_page.html
+++ b/pages/reviews_page.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="../css/confirmation_modal.css" />
         <link rel="stylesheet" href="../css/review_page.css" />
         <script src="https://cdn.jsdelivr.net/npm/handlebars/dist/handlebars.min.js"></script>
-        <script src="../scripts/load_nav_template.js"></script>
+        <script type="module" src="../scripts/load_nav_template.js"></script>
     </head>
     <body>
         <div class="container">
@@ -35,6 +35,6 @@
 
         <script src="../scripts/confirmation_modal.js"></script>
         <script type="module" src="../scripts/add_review.js"></script>
-        <script src="../scripts/nav_bar_logged_in.js"></script>
+        <script type="module" src="../scripts/nav_bar_logged_in.js"></script>
     </body>
 </html>
