--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <title>Log In Book Rating System</title>
         <link rel="stylesheet" href="../css/index.css" />
-        <script type="module" src="../scripts/index.js"></script>
+        <script type="module" src="./scripts/index.js"></script>
         <style>
             .error_message {
                 padding: 0.5em;
@@ -46,7 +46,7 @@
                                 autocomplete="on"
                                 required />
                             <p class="forgot_pass">
-                                <a href="#" alt="forgot password">Forgot password?</a>
+                                <a href="./pages/forgot_password.html" alt="forgot password">Forgot password?</a>
                             </p>
                         </div>
                         <div>
